--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     
     </main>
     <footer>
-        <p>Site criado por <em><a href="#">Gustavo Guanabara</a></em> para o <em><a href="">CursoemVideo</a></em>.</p>
+        <p>Site desenvolvido por <em><a href="https://danilo-palacio.github.io/">Danilo Vinicius</a></em> em aula com <em><a href="https://www.cursoemvideo.com/">CursoemVideo</a></em>.</p>
     </footer>
 </body>
 </html>
